Date picker dialog improvements